Starting Branch for Track Style Manager Rework

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "Lua.diagnostics.globals": [
         "reaper",
         "mh",
-        "r"
+        "r",
+        "tsm"
     ],
     "editor.defaultFormatter": "sumneko.lua"
 }
