--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "reaper",
         "mh",
         "r",
-        "tsm"
+        "tvm"
     ],
     "editor.defaultFormatter": "sumneko.lua"
 }
